--- a/src/app/become-a-model/become-a-model.component.html
+++ b/src/app/become-a-model/become-a-model.component.html
@@ -267,8 +267,8 @@
 =======
             <!--<div class="uploadsection">-->
 
-            <app-uploader uploadtype="single" [filenameval]="uploader" ></app-uploader>
-            <app-uploader uploadtype="multiple" [filenameval]="uploader1" ></app-uploader>
+            <!--<app-uploader uploadtype="single" [filenameval]="uploader" ></app-uploader>-->
+            <app-uploader uploadtype="multiple" [uploadpath]="modeluploadpath"  [filepath]="modelfilepath"  [filenameval]="uploader1" ></app-uploader>
 
             <button (click)="checkupload()">Check uploads</button>
 
@@ -417,5 +417,4 @@
     </div>
   </div>
 </div>-->
-<input style="display: none" type="file" accept="*" ngFileSelect [options]="options" (uploadOutput)="apiService.onUploadOutput($event)" [uploadInput]="apiService.uploadInput" #fileInput1>
-<span>upload file: </span> <button (click)="fileInput1.click()" type="button">upload</button>
+
