--- a/src/app/become-a-model/become-a-model.component.html
+++ b/src/app/become-a-model/become-a-model.component.html
@@ -262,15 +262,15 @@
 
         <div class="form-group col-xs-12">
           <!--<div class="uploadsection">-->
-<<<<<<< HEAD
+<!--<<<<<<< HEAD-->
           <!--<div class="uploadsection">-->
-=======
+<!--=======-->
             <!--<div class="uploadsection">-->
 
             <!--<app-uploader uploadtype="single" [filenameval]="uploader" ></app-uploader>-->
             <app-uploader uploadtype="multiple" [uploadpath]="modeluploadpath"  [filepath]="modelfilepath"  [filenameval]="uploader1" ></app-uploader>
 
-            <button (click)="checkupload()">Check uploads</button>
+          <!--  <button (click)="checkupload()">Check uploads</button>-->
 
               <!--<div ngFileDrop [options]="options" (uploadOutput)="onUploadOutput($event)" [uploadInput]="uploadInput" [ngClass]="{ 'is-drop-over': dragOver }">
               </div>
