--- a/src/app/become-a-model/become-a-model.component.html
+++ b/src/app/become-a-model/become-a-model.component.html
@@ -367,7 +367,7 @@
 
 <ng-template #error>
   <div class="modal-body">
-    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="errormodal()">&times;</button>
+    <button type="button" class="close" data-dismiss="modal" aria-hidden="true" (click)="closemodal()">&times;</button>
     <div class="logoshatterblock">
       <img src="../assets/images/shaterblockLogo.png" class="newhomelogo">
     </div>
